--- a/web/css/site.css
+++ b/web/css/site.css
@@ -12,13 +12,13 @@ body {
 }
 
 .ko{
-    background-image: url(http://kephost.com/images/2017/11/14/bg1.png);
+    /*background-image: url(views/images/navbarbg.png);*/
     margin: 0 auto -60px;
     color: #000000;
-    letter-spacing: 1.3px;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
-    font-family: tahoma;
-    size: 17px;
+    font-family: georgia;
+    size: 20px;
 }
 
 .wrap > .container {
