--- a/web/css/site.css
+++ b/web/css/site.css
@@ -11,8 +11,14 @@ body {
     padding: 0 0 0px;
 }
 
+.title1
+{
+    letter-spacing: 2px;
+    size: 25px;
+}
+
 .ko{
-    /*background-image: url(views/images/navbarbg.png);*/
+    background-image: url(img/navbarbg.png);
     margin: 0 auto -60px;
     color: #000000;
     letter-spacing: 1.5px;
