--- a/web/css/site.css
+++ b/web/css/site.css
@@ -11,10 +11,27 @@ body {
     padding: 0 0 0px;
 }
 
+
+.content{
+
+
+    letter-spacing: 0.7px;
+    line-height: 19px;
+    font-family: georgia;
+    color: #8f8f8f;
+    text-align: justify;
+}
 .title1
 {
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     size: 25px;
+    background-color: #f0f6f6;
+    text-transform: capitalize;
+    font-family: georgia;
+    text-shadow: 0px 1px 1px #c8c8c8;
+    color: #97acc5;
+    font-style: italic;
+    padding-left: 20px;
 }
 
 .ko{
